--- a/app/src/main/res/layout/list_moves.xml
+++ b/app/src/main/res/layout/list_moves.xml
@@ -13,6 +13,15 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <ImageView
+            android:id="@+id/typeMoveIV"
+            android:layout_width="51dp"
+            android:layout_height="41dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/categoryMoveIV"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/fire_type_symbol_galar_by_jormxdos_dffvl1m" />
+
         <TextView
             android:id="@+id/moveNameTV"
             android:layout_width="wrap_content"
@@ -34,5 +43,15 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageView
+            android:id="@+id/categoryMoveIV"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/physical_move_icon_by_jormxdos_dfgb60u" />
     </androidx.constraintlayout.widget.ConstraintLayout>
+
 </com.google.android.material.card.MaterialCardView>
