--- a/app/src/main/res/layout/list_moves.xml
+++ b/app/src/main/res/layout/list_moves.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="8dp"
+    android:backgroundTint="@color/white"
     app:contentPadding="8dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -26,12 +27,13 @@
             android:id="@+id/moveNameTV"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="32dp"
+            android:layout_marginStart="50dp"
             android:text="TextView"
+            android:textAlignment="textStart"
             android:textSize="18dp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/levelTV"
+            app:layout_constraintStart_toStartOf="@+id/levelTV"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
@@ -39,10 +41,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="TextView"
-            android:textSize="18dp"
+            android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
+
 
         <ImageView
             android:id="@+id/categoryMoveIV"
@@ -52,6 +56,33 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/physical_move_icon_by_jormxdos_dfgb60u" />
+
+        <TextView
+            android:id="@+id/accMoveTV"
+            android:layout_width="50dp"
+            android:layout_height="20dp"
+            android:layout_marginEnd="5dp"
+            android:background="@drawable/move_right_shape"
+            android:text="TextView"
+            android:textSize="15sp"
+            android:textAlignment="center"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/typeMoveIV"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/powerTV"
+            android:layout_width="50dp"
+            android:layout_height="20dp"
+            android:layout_marginEnd="2dp"
+            android:background="@drawable/move_points_shape"
+            android:gravity="center"
+            android:text="TextView"
+            android:textSize="15sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/accMoveTV"
+            app:layout_constraintTop_toTopOf="parent" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </com.google.android.material.card.MaterialCardView>
