--- a/app/src/main/res/layout/list_evolution.xml
+++ b/app/src/main/res/layout/list_evolution.xml
@@ -1,12 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_margin="8dp"
-    android:backgroundTint="@color/white"
-    app:contentPadding="8dp">
+    android:layout_height="wrap_content">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -16,7 +13,6 @@
             android:id="@+id/lvlDetailsTV"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="16dp"
             android:elevation="10dp"
             android:text="Lvl16"
             app:layout_constraintBottom_toTopOf="@+id/arrowIV"
@@ -30,28 +26,52 @@
             android:elevation="10dp"
             android:src="@drawable/baseline_arrow_forward_24"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/evolution2IV"
-            app:layout_constraintStart_toEndOf="@+id/evolution1IV" />
+            app:layout_constraintEnd_toStartOf="@+id/evolutionIV"
+            app:layout_constraintStart_toEndOf="@+id/basicIV"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
-            android:id="@+id/evolution1IV"
+            android:id="@+id/evolutionIV"
             android:layout_width="100dp"
             android:layout_height="100dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="16dp"
             android:elevation="10dp"
             android:src="@drawable/pokebola_pokeball_png_0"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+
+        <ImageView
+            android:id="@+id/basicIV"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            android:elevation="10dp"
+            android:src="@drawable/pokebola_pokeball_png_0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <ImageView
-            android:id="@+id/evolution2IV"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:elevation="10dp"
-            android:src="@drawable/pokebola_pokeball_png_0"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+        <TextView
+            android:id="@+id/textView10"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="TextView"
+            app:layout_constraintEnd_toEndOf="@+id/evolutionIV"
+            app:layout_constraintStart_toStartOf="@+id/evolutionIV"
+            app:layout_constraintTop_toBottomOf="@+id/evolutionIV" />
+
+        <TextView
+            android:id="@+id/basicEvolutionNameTV"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="TextView"
+
+            app:layout_constraintEnd_toEndOf="@+id/basicIV"
+            app:layout_constraintStart_toStartOf="@+id/basicIV"
+            app:layout_constraintTop_toBottomOf="@+id/basicIV" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-</com.google.android.material.card.MaterialCardView>
+
+</FrameLayout>
