--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -259,19 +259,6 @@
         app:layout_constraintStart_toEndOf="@+id/typeDetailsTV"
         app:layout_constraintTop_toBottomOf="@+id/detailsTitleTV" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/evolutionRV"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:elevation="30dp"
-        android:visibility="gone"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
-        tools:listitem="@layout/list_evolution" />
-
     <ScrollView
         android:id="@+id/scrollAbout"
         android:layout_width="match_parent"
@@ -279,7 +266,7 @@
         android:layout_margin="20dp"
         android:elevation="10dp"
         android:isScrollContainer="true"
-        android:visibility="visible"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -455,260 +442,169 @@
         </LinearLayout>
     </ScrollView>
 
-
-    <LinearLayout
-        android:id="@+id/statsLinear"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/statsRV"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_margin="20dp"
+        android:layout_marginTop="8dp"
         android:elevation="10dp"
-        android:orientation="vertical"
-        android:scrollbarAlwaysDrawVerticalTrack="true"
         android:visibility="gone"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/radioGroup"
-        tools:layout_editor_absoluteX="20dp">
+        tools:listitem="@layout/list_stats" />
 
-        <LinearLayout
+    <FrameLayout
+        android:id="@+id/evolutionFL"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginTop="8dp"
+        android:elevation="10dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/radioGroup">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:layout_height="match_parent">
 
             <TextView
-                android:layout_width="0dp"
+                android:id="@+id/lvlDetailsTV"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="2"
-                android:text="HP"
-                android:textColor="#989898"
-                android:textSize="18sp" />
+                android:layout_marginTop="32dp"
+                android:elevation="10dp"
+                android:text="Lvl16"
+                app:layout_constraintEnd_toEndOf="@+id/arrowIV"
+                app:layout_constraintStart_toStartOf="@+id/arrowIV"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <ImageView
+                android:id="@+id/arrowIV"
+                android:layout_width="86dp"
+                android:layout_height="48dp"
+                android:layout_marginTop="16dp"
+                android:elevation="10dp"
+                android:src="@drawable/baseline_arrow_forward_24"
+                app:layout_constraintEnd_toStartOf="@+id/evolution2IV"
+                app:layout_constraintStart_toEndOf="@+id/evolution1IV"
+                app:layout_constraintTop_toBottomOf="@+id/lvlDetailsTV" />
+
+            <ImageView
+                android:id="@+id/evolution1IV"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_marginStart="24dp"
+                android:layout_marginTop="16dp"
+                android:elevation="10dp"
+                android:src="@drawable/pokebola_pokeball_png_0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <ImageView
+                android:id="@+id/evolution2IV"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="24dp"
+                android:elevation="10dp"
+                android:src="@drawable/pokebola_pokeball_png_0"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
 
             <TextView
-                android:id="@+id/hpTV"
-                android:layout_width="0dp"
+                android:id="@+id/lvlDetails2TV"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:text="60"
-                android:textSize="18sp" />
+                android:layout_marginTop="32dp"
+                android:elevation="10dp"
+                android:text="Lvl16"
+                app:layout_constraintEnd_toEndOf="@+id/arrow2IV"
+                app:layout_constraintHorizontal_bias="0.49"
+                app:layout_constraintStart_toStartOf="@+id/arrow2IV"
+                app:layout_constraintTop_toBottomOf="@+id/arrowIV" />
 
-            <ProgressBar
-                android:id="@+id/hpPB"
-                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
-                android:layout_width="0dp"
-                android:layout_height="6dp"
-                android:layout_gravity="center"
-                android:layout_weight="4"
-                android:progress="40"
-                android:progressDrawable="@drawable/green_pb" />
-        </LinearLayout>
+            <ImageView
+                android:id="@+id/arrow2IV"
+                android:layout_width="86dp"
+                android:layout_height="48dp"
+                android:layout_marginTop="24dp"
+                android:elevation="10dp"
+                android:src="@drawable/baseline_arrow_forward_24"
+                app:layout_constraintEnd_toStartOf="@+id/evolution2_2IV"
+                app:layout_constraintHorizontal_bias="0.506"
+                app:layout_constraintStart_toEndOf="@+id/evolution1_2IV"
+                app:layout_constraintTop_toBottomOf="@+id/lvlDetails2TV" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:orientation="horizontal">
+            <ImageView
+                android:id="@+id/evolution1_2IV"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_marginTop="32dp"
+                android:elevation="10dp"
+                android:src="@drawable/pokebola_pokeball_png_0"
+                app:layout_constraintEnd_toEndOf="@+id/evolution1IV"
+                app:layout_constraintStart_toStartOf="@+id/evolution1IV"
+                app:layout_constraintTop_toBottomOf="@+id/evolution1IV" />
+
+            <ImageView
+                android:id="@+id/evolution2_2IV"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_marginTop="32dp"
+                android:elevation="10dp"
+                android:src="@drawable/pokebola_pokeball_png_0"
+                app:layout_constraintEnd_toEndOf="@+id/evolution2IV"
+                app:layout_constraintStart_toStartOf="@+id/evolution2IV"
+                app:layout_constraintTop_toBottomOf="@+id/evolution2IV" />
 
             <TextView
-                android:layout_width="0dp"
+                android:id="@+id/textView8"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="2"
-                android:text="Sp.Atk"
-                android:textColor="#989898"
-                android:textSize="18sp" />
+                android:layout_marginTop="8dp"
+                android:text="TextView"
+                app:layout_constraintEnd_toEndOf="@+id/evolution1IV"
+                app:layout_constraintStart_toStartOf="@+id/evolution1IV"
+                app:layout_constraintTop_toBottomOf="@+id/evolution1IV" />
 
             <TextView
-                android:id="@+id/attackTV"
-                android:layout_width="0dp"
+                android:id="@+id/textView9"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:text="70"
-                android:textSize="18sp" />
-
-            <ProgressBar
-                android:id="@+id/attcakPB"
-                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
-                android:layout_width="0dp"
-                android:layout_height="6dp"
-                android:layout_gravity="center"
-                android:layout_weight="4"
-                android:progress="40"
-                android:progressDrawable="@drawable/green_pb" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:orientation="horizontal">
+                android:layout_marginTop="8dp"
+                android:text="TextView"
+                app:layout_constraintEnd_toEndOf="@+id/evolution2IV"
+                app:layout_constraintStart_toStartOf="@+id/evolution2IV"
+                app:layout_constraintTop_toBottomOf="@+id/evolution2IV" />
 
             <TextView
-                android:layout_width="0dp"
+                android:id="@+id/textView10"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="2"
-                android:text="Defence"
-                android:textColor="#989898"
-                android:textSize="18sp" />
+                android:layout_marginTop="8dp"
+                android:text="TextView"
+                app:layout_constraintEnd_toEndOf="@+id/evolution1_2IV"
+                app:layout_constraintStart_toStartOf="@+id/evolution1_2IV"
+                app:layout_constraintTop_toBottomOf="@+id/evolution1_2IV" />
 
             <TextView
-                android:id="@+id/defenceTV"
-                android:layout_width="0dp"
+                android:id="@+id/textView11"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:text="64"
-                android:textSize="18sp" />
-
-            <ProgressBar
-                android:id="@+id/defencePB"
-                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
-                android:layout_width="0dp"
-                android:layout_height="6dp"
-                android:layout_gravity="center"
-                android:layout_weight="4"
-                android:progress="40"
-                android:progressDrawable="@drawable/green_pb" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:orientation="horizontal">
-
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="2"
-                android:text="Sp.Atk"
-                android:textColor="#989898"
-                android:textSize="18sp" />
-
-            <TextView
-                android:id="@+id/spAtkTV"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:text="300"
-                android:textSize="18sp" />
-
-            <ProgressBar
-                android:id="@+id/spAtkPB"
-                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
-                android:layout_width="0dp"
-                android:layout_height="6dp"
-                android:layout_gravity="center"
-                android:layout_weight="4"
-                android:progress="40"
-                android:progressDrawable="@drawable/green_pb" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:orientation="horizontal">
-
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="2"
-                android:text="Sp.Def"
-                android:textColor="#989898"
-                android:textSize="18sp" />
-
-            <TextView
-                android:id="@+id/spDefTV"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:text="30"
-                android:textSize="18sp" />
-
-            <ProgressBar
-                android:id="@+id/spDefPB"
-                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
-                android:layout_width="0dp"
-                android:layout_height="6dp"
-                android:layout_gravity="center"
-                android:layout_weight="4"
-                android:progress="40"
-                android:progressDrawable="@drawable/green_pb" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:orientation="horizontal">
-
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="2"
-                android:text="Speed"
-                android:textColor="#989898"
-                android:textSize="18sp" />
-
-            <TextView
-                android:id="@+id/speedTV"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:text="45"
-                android:textSize="18sp" />
-
-            <ProgressBar
-                android:id="@+id/progressSpeed"
-                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
-                android:layout_width="0dp"
-                android:layout_height="6dp"
-                android:layout_gravity="center"
-                android:layout_weight="4"
-                android:progress="60"
-                android:progressDrawable="@drawable/red_pb" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:orientation="horizontal">
-
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="2"
-                android:text="Total"
-                android:textColor="#989898"
-                android:textSize="18sp" />
-
-            <TextView
-                android:id="@+id/totalTV"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:text="300"
-                android:textSize="18sp" />
-
-            <ProgressBar
-                android:id="@+id/progressTotal"
-                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
-                android:layout_width="0dp"
-                android:layout_height="6dp"
-                android:layout_gravity="center"
-                android:layout_weight="4"
-                android:progress="40"
-                android:progressDrawable="@drawable/green_pb" />
-        </LinearLayout>
-
-    </LinearLayout>
+                android:layout_marginTop="8dp"
+                android:text="TextView"
+                app:layout_constraintEnd_toEndOf="@+id/evolution2_2IV"
+                app:layout_constraintStart_toStartOf="@+id/evolution2_2IV"
+                app:layout_constraintTop_toBottomOf="@+id/evolution2_2IV" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
 
+    </FrameLayout>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
