--- a/app/src/main/res/drawable/red_pb.xml
+++ b/app/src/main/res/drawable/red_pb.xml
@@ -11,7 +11,7 @@
     <item android:id="@android:id/progress">
         <clip>
             <shape android:shape="rectangle">
-                <solid android:color="@color/red"/>
+                <solid android:color="@color/SI_Yellow"/>
                 <corners
                     android:radius="50dp"/>
             </shape>
