--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/SI_Grey"
-    tools:context=".DetailsFragment">
+    tools:context=".ui.DetailsFragment">
 
     <ImageView
         android:id="@+id/backgroundIV"
@@ -72,6 +72,7 @@
         android:id="@+id/radioGroup"
         android:layout_width="match_parent"
         android:layout_height="50dp"
+        android:layout_marginTop="120dp"
         android:background="@drawable/radio_group_bg"
         android:elevation="10dp"
         android:orientation="horizontal"
@@ -393,29 +394,6 @@
                     android:layout_weight="5"
                     android:textSize="18sp"
                     tools:text="ashjdjsahjdsajh, hdashdashhdash,hdashdash" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="3"
-                    android:text="Egg Group"
-                    android:textColor="#989898"
-                    android:textSize="18sp" />
-
-                <TextView
-                    android:id="@+id/eggGroupTV"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="5"
-                    android:textSize="18sp"
-                    tools:text="Monster" />
             </LinearLayout>
 
             <LinearLayout
