--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,11 +1,11 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.Pokedex" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Base.Theme.Pokedex" parent="Theme.Material3.Light.NoActionBar">
          <item name="colorPrimary">@color/red</item>
         <item name="colorPrimaryVariant">#00FFE5</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">#FFFFFF</item>
+        <item name="colorSecondary">@color/black</item>
         <item name="colorSecondaryVariant">@color/SI_Grey</item>
         <item name="colorOnSecondary">@color/black</item>
     </style>
